fix: Wrap JavaFX screenshot operation in Platform.runLater() to prevent FX thread violation
- TelegramCommandHandler.captureAndSendScreenshot() was being called from TelegramPollingThread (background thread)
- JavaFX operations like scene.snapshot() must execute on the JavaFX Application Thread
- Wrapped screenshot capture in Platform.runLater() with CountDownLatch to wait for completion
- Added 10-second timeout to prevent hanging if FX thread is unavailable
- Properly handles threading exceptions and interrupts
- Fixes error: 'Not on FX application thread; currentThread = TelegramPollingThread'

Changes:
- Added Platform import from javafx.application
- Added CountDownLatch and AtomicReference for thread-safe operation
- Refactored captureAndSendScreenshot() to execute on FX thread
- All screenshot captures now happen on the correct JavaFX Application Thread